#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program. If not, see <http://www.gnu.org/licenses/>
################################################################################
v0.8.2
- landsat assets now tagged as 'DN' and 'SR' for USGS downloaded surface reflectance.

v0.8.1
- added support for `alltouch` paramter in CookieCutter (gippy==0.3.6)

v0.8.0
- Indvidual data utilities deprecated (e.g., landsat), replaced with gips_ scripts
- New gips scripts, each with more specific functionatlity: gips_inventory, gips_warptiles, gips_process
- Refactor of core inventory and tiles for streamlined code reuse
- Requirements (python libraries) can be specified for each data module
- Interpolation option added to project function (neartest neighbor, bilinear, or cubic)
- Setup now puts settings.py at /etc/gips/settings.py
- Ability to loop through all features in a vector layer (using the --loop option)
- where argument added to include SQL where clauses
- Setup no-longer puts settings.py in /etc/gips/
- Configuration managed through gips_config command
- Fixed bug in handling date specification

Landsat
- Added wtemp product (Water temperature, atm corrected with MODTRAN using custom profiles from MERRA data)

MODIS
- fixed bug in MODIS temperature making them unable to be used in project (multiple identical output band names)
- addition of obstime product (observation time for MCD derived products)

CDL
- Updated CDL directory structure to use standard GIPS format (tiledir/datedir)
- added tiles.shp to repository

MERRA
- Updated merra data module

AOD
- updated to be in-line with new gips.utils.settings framework


v0.7.1
- Better internal handling of sensors for data where there can be multiple sensors on a single day